# aio-fairshare

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
aio_fairshare/: __init__.py  semaphore.py
tests/: test_semaphore.py
