[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aio-fairshare"
version = "0.1.0"
description = "Async fair-share semaphore for multi-tenant resource management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rodion Prodaivoda", email = "prodaivodarodion@gmail.com" }
]
keywords = [
    "asyncio",
    "semaphore",
    "fair-share",
    "rate-limiting",
    "multi-tenant",
    "resource-management",
    "concurrency",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/aio-fairshare"
Documentation = "https://github.com/yourusername/aio-fairshare#readme"
Repository = "https://github.com/yourusername/aio-fairshare"
Issues = "https://github.com/yourusername/aio-fairshare/issues"

[tool.hatch.build.targets.wheel]
packages = ["aio_fairshare"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
