[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aio-fairshare"
version = "0.2.1"
description = "Async fair-share semaphore for multi-tenant resource management"
readme = "README.md"
license = "MIT"
authors = ["Rodion Prodaivoda <your@email.com>"]
keywords = [
    "asyncio",
    "semaphore",
    "fair-share",
    "rate-limiting",
    "multi-tenant",
    "resource-management",
    "concurrency",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "aio_fairshare" }]

[tool.poetry.urls]
Homepage = "https://github.com/ProdyRodion/aio-fairshare"
Documentation = "https://github.com/ProdyRodion/aio-fairshare#readme"
Repository = "https://github.com/ProdyRodion/aio-fairshare"
Issues = "https://github.com/ProdyRodion/aio-fairshare/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21"
ruff = "^0.1"
mypy = "^1.0"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
